[package]
name = "mt_dumptexmod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
futures = { version = "0.3.26" }
mt_net = { git = "https://github.com/minetest-rust/mt_net", features = ["conn", "client"] }
rand = "0.8.5"
sha2 = "0.10.6"
srp = { git = "https://github.com/minetest-rust/PAKEs.git" }
tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread", "signal"] }
