[package]
name = "texmodbot"
version = "0.1.0"
edition = "2021"
description = "Extract texture modifiers from minetest servers to obtain test data for texture modifier parsers"

[dependencies]
mt_net = { git = "https://github.com/minetest-rust/mt_net", features = ["conn", "client"] }
tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread", "signal"] }
mt_auth = { git = "https://github.com/minetest-rust/mt_auth" }
clap = { version = "4.3.0", features = ["derive"] }
futures-util = "0.3.28"
